--- a/mhoperator.html
+++ b/mhoperator.html
@@ -79,28 +79,27 @@ function calculateFlowRate(inputField) {
 
 // Alum Dosing Calculation
 function calculateAlum(inputField) {
-    const dose = parseFloat(document.getElementById('dose').value) || 0;
-    const rwFlow = parseFloat(document.getElementById('rw_flow').value) || 0;
-    const chemFlowLmin = parseFloat(document.getElementById('chem_flow_lmin').value) || 0;
-    const chemFlowLhour = parseFloat(document.getElementById('chem_flow_lhour').value) || 0;
+    const dose = parseFloat(document.getElementById('dose').value) || null;
+    const rwFlow = parseFloat(document.getElementById('rw_flow').value) || null;
+    const chemFlowLmin = parseFloat(document.getElementById('chem_flow_lmin').value) || null;
+    const chemFlowLhour = parseFloat(document.getElementById('chem_flow_lhour').value) || null;
 
-    if (inputField === 'chem_flow_lhour') {
+    if (inputField === 'chem_flow_lhour' && chemFlowLhour !== null) {
         document.getElementById('chem_flow_lmin').value = (chemFlowLhour / 60).toFixed(2);
-    } else if (inputField === 'chem_flow_lmin') {
+    } else if (inputField === 'chem_flow_lmin' && chemFlowLmin !== null) {
         document.getElementById('chem_flow_lhour').value = (chemFlowLmin * 60).toFixed(2);
     }
 
-    if (inputField === 'dose') {
-        if (rwFlow > 0) {
-            const chemFlowH = (dose * rwFlow * 3600 * 1000 * 1000) / (1.33 * 0.5);
-            document.getElementById('chem_flow_lhour').value = chemFlowH.toFixed(2);
-            document.getElementById('chem_flow_lmin').value = (chemFlowH / 60).toFixed(2);
-        }
-    } else if (inputField === 'rw_flow') {
-        if (chemFlowLhour > 0) {
-            const calcDose = (chemFlowLhour * 1.33 * 0.5) / (rwFlow * 3600 * 1000 * 1000);
-            document.getElementById('dose').value = (calcDose * 1000000).toFixed(2);
-        }
+    if (dose !== null && rwFlow !== null) {
+        const chemFlowH = (dose * rwFlow * 3600 * 1000 * 1000) / (1.33 * 0.5);
+        document.getElementById('chem_flow_lhour').value = chemFlowH.toFixed(2);
+        document.getElementById('chem_flow_lmin').value = (chemFlowH / 60).toFixed(2);
+    } else if (dose !== null && chemFlowLhour !== null) {
+        const calcRwFlow = (chemFlowLhour * 1.33 * 0.5) / (dose * 3600 * 1000 * 1000);
+        document.getElementById('rw_flow').value = calcRwFlow.toFixed(5);
+    } else if (rwFlow !== null && chemFlowLhour !== null) {
+        const calcDose = (chemFlowLhour * 1.33 * 0.5) / (rwFlow * 3600 * 1000 * 1000);
+        document.getElementById('dose').value = (calcDose * 1000000).toFixed(2);
     }
 }
 </script>
