--- a/mhoperator.html
+++ b/mhoperator.html
@@ -80,7 +80,7 @@ function calculateAlum(inputField) {
     const rwFlow = parseFloat(document.getElementById('rw_flow').value) || null;
 
     if (dose !== null && rwFlow !== null) {
-        const alumFlow = (dose * rwFlow * 3600) / (1.33 * 0.5 * 1000 *1000);
+        const alumFlow = (dose * rwFlow * 3600) / (1.33 * 0.5 * 1000);
         document.getElementById('alum_flow_lhour').value = alumFlow.toFixed(2);
     }
 }
