--- a/mhoperator.html
+++ b/mhoperator.html
@@ -18,7 +18,7 @@
             font-weight: bold;
         }
         .calculator input {
-            width: 50%;
+            max width: 400px;
             padding: 8px;
             margin-bottom: 15px;
             box-sizing: border-box;
