--- a/mhoperator.html
+++ b/mhoperator.html
@@ -94,6 +94,7 @@
         <label for="alum_flow">Alum Flow (litres/hour):</label>
         <input type="number" id="alum_flow" step="any">
         <button onclick="calculateAlum('flow')">Calculate</button>
+        <p id="alum_flow_lmin">Alum Flow: <span>0</span> litres/min</p>
     </div>
 
     <!-- PAC Dosing Calculator -->
@@ -110,6 +111,7 @@
         <label for="pac_flow">PAC Flow (litres/hour):</label>
         <input type="number" id="pac_flow" step="any">
         <button onclick="calculatePAC('flow')">Calculate</button>
+        <p id="pac_flow_lmin">PAC Flow: <span>0</span> litres/min</p>
     </div>
 
     <!-- Chlorine Dosing Calculator -->
@@ -126,6 +128,7 @@
         <label for="chlorine_flow">Cl2 Flow (kg/hour):</label>
         <input type="number" id="chlorine_flow" step="any">
         <button onclick="calculateChlorine('flow')">Calculate</button>
+        <p id="chlorine_flow_kg_day">Cl2 Flow: <span>0</span> kg/day</p>
     </div>
 </div>
 
@@ -143,6 +146,9 @@ function calculateAlum(inputField) {
     } else if (inputField === 'flow' && dose !== null && rwFlow !== null) {
         document.getElementById('alum_flow').value = ((dose * rwFlow * 3600) / (1.33 * 0.5 * 1000)).toFixed(2);
     }
+
+    const alumFlow = parseFloat(document.getElementById('alum_flow').value) || 0;
+    document.getElementById('alum_flow_lmin').innerHTML = `Alum Flow: <span>${(alumFlow / 60).toFixed(2)}</span> litres/min`;
 }
 
 // PAC Dosing Calculation
@@ -158,23 +164,5 @@ function calculatePAC(inputField) {
     } else if (inputField === 'flow' && dose !== null && rwFlow !== null) {
         document.getElementById('pac_flow').value = ((dose * rwFlow * 3600) / (1.19 * 0.35 * 1000)).toFixed(2);
     }
-}
 
-// Chlorine Dosing Calculation
-function calculateChlorine(inputField) {
-    const dose = parseFloat(document.getElementById('chlorine_dose').value) || null;
-    const rwFlow = parseFloat(document.getElementById('chlorine_rw_flow').value) || null;
-    const flow = parseFloat(document.getElementById('chlorine_flow').value) || null;
-
-    if (inputField === 'dose' && rwFlow !== null && flow !== null) {
-        document.getElementById('chlorine_dose').value = ((flow * 1000) / (rwFlow * 3600)).toFixed(2);
-    } else if (inputField === 'rw_flow' && dose !== null && flow !== null) {
-        document.getElementById('chlorine_rw_flow').value = ((flow * 1000) / (dose * 3600)).toFixed(5);
-    } else if (inputField === 'flow' && dose !== null && rwFlow !== null) {
-        document.getElementById('chlorine_flow').value = ((dose * rwFlow * 3600) / 1000).toFixed(2);
-    }
-}
-</script>
-
-</body>
-</html>
+    const pacFlow = parseFloat(document.getElementById('pac_flow').
