--- a/mhblock.html
+++ b/mhblock.html
@@ -11,57 +11,60 @@
             background-color: #f7f7f7;
             display: flex;
             flex-wrap: wrap;
-            gap: 20px;
+            gap: 10px;
             justify-content: center;
         }
         .block {
-            width: 500px;
-            padding: 15px;
+            width: 23%;
+            min-width: 280px;
+            padding: 10px;
             background: #ffffff;
             border-radius: 8px;
             box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+            box-sizing: border-box;
         }
         h1 {
             text-align: center;
-            font-size: 1.5em;
+            font-size: 1.2em;
             color: #333333;
             width: 100%;
         }
         .calculator h2 {
-            font-size: 1.1em;
-            margin-bottom: 8px;
+            font-size: 1em;
+            margin-bottom: 6px;
             color: #333333;
         }
         label {
             display: block;
-            margin-bottom: 5px;
+            margin-bottom: 4px;
             font-weight: bold;
             color: #555555;
+            font-size: 0.9em;
         }
         input {
-            width: calc(100% - 20px);
-            padding: 6px;
-            margin-bottom: 8px;
+            width: calc(100% - 10px);
+            padding: 5px;
+            margin-bottom: 6px;
             border: 1px solid #cccccc;
             border-radius: 4px;
             box-sizing: border-box;
-            font-size: 0.9em;
+            font-size: 0.85em;
         }
         button {
-            padding: 6px 10px;
+            padding: 5px 8px;
             border: none;
             border-radius: 4px;
             background-color: #007bff;
             color: #ffffff;
-            font-size: 0.9em;
+            font-size: 0.85em;
             cursor: pointer;
-            margin-bottom: 12px;
+            margin-bottom: 8px;
         }
         button:hover {
             background-color: #0056b3;
         }
         p {
-            font-size: 0.9em;
+            font-size: 0.85em;
             color: #333;
         }
     </style>
@@ -188,3 +191,4 @@ function calculateChlorine(inputField) {
 
 </body>
 </html>
+
